...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C4EAC4">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="334dp"
        android:layout_height="177dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />


    <Button
        android:id="@+id/plan_btn"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#71AA31"
        android:text="Plan"
        app:layout_constraintEnd_toEndOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plan_list_view" />

    <TextView
...
