<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="add_btn" type="id" />
    <item name="clear" type="id">@+id/clear</item>
</resources>
